Changes for 1.6.3

 - [ZBX-311] fixed PostgreSQL errors with out of range string data (Sasha)
 - [ZBX-696] fixed import of triggers with {HOSTNAME} macro (Sasha)
 - [ZBX-677] fixed handling of -c parameter in zabbix_sender. Thanks to Jakov Sosic (Sasha)
 - [ZBX-693] fixed timeout handling for SNMP connect (Sasha)
 - [ZBX-690] fixed memory leak if trigger evaluation fails (Sasha)
 - [DEV-285] added configurable the first dropdown selection (Artem)
 - [ZBX-689] allowed processing of non-agent based checks for unreachable hosts (Sasha)
 - [ZBX-683] removed "Step" field for recovery messages from Event details (Sasha)
 - [ZBX-680] fixed login while entering any page with HTTP auth enabled (Artem)
 - [ZBX-678] default number of HTTP pollers was decreased to one (Sasha)
 - [ZBX-676] fixed sql problem with deletion of many hosts (Artem)
 - [ZBX-675] fixed wrong result of function "nodata" after server restart (Sasha)
 - [ZBX-672] added polish locale (Artem)
 - [ZBX-671] removed net-snmp debug messages from server logs (Sasha)
 - [ZBX-662] fixed support of quotation marks in command in UserParameter's (Sasha)
 - [ZBX-658] fixed deadlocks in dbcache module (Sasha)
 - [ZBX-659] added define for menu caching (Artem)
 - [ZBX-581] fixed latest data auto-refresh cripples filter viewing issue (Artem)
 - [ZBX-657] improved performance of the graph related screen due to missing index (Sasha)
 - [ZBX-656] fixed warning zbx_malloc: allocating already allocated memory in json.c (Sasha)
 - [DEV-282] fixes frontend vulnerabilities (Artem)

Changes for 1.6.2

 - [ZBX-653] fixes for postgresql (Artem)
 - [DEV-137] fixed compilation warnings (Sasha)
 - [ZBX-652] improved support of SNMP items (Sasha)
 - [ZBX-589] added processing of quoted numbers ("0.5" => float 0.5) (Sasha)
 - [DEV-275] changed value processing. Multiplier after delta (Sasha)
 - [DEV-274] added overflow check for uint64 for incoming values (Sasha)