@@ -1,5 +1,6 @@
 Changes for 1.6.3
 
+ - [DEV-286] improved zabbix main menu (Artem)
  - [ZBX-311] fixed PostgreSQL errors with out of range string data (Sasha)
  - [ZBX-696] fixed import of triggers with {HOSTNAME} macro (Sasha)
  - [ZBX-677] fixed handling of -c parameter in zabbix_sender. Thanks to Jakov Sosic (Sasha)
